# otus-python-developer-basic

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: run_tests.yml
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
homework_03/views/: __init__.py  items.py  pong.py
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: __init__.py  app.py  main.py
homework_05/templates/: about.html  add_post.html  index.html  records.html
homework_06/: README.md  app.py  docker-compose.yml  main.py  models.py  myapp.py  nginx.conf  pyproject.toml  requirements.in  requirements.txt
homework_06/docker-build/: Dockerfile
homework_06/src/: __init__.py  main.py
homework_06/src/templates/: base.html  index.html
homework_06/templates/: about.html  add_record.html  base.html  index.html  records.html  view_records.html
homework_07/carshop/: README.md
homework_07/carshop/carshop/cars/: admin.py  models.py  urls.py  views.py
homework_07/carshop/carshop/cars/migrations/: 0001_initial.py
homework_07/carshop/carshop/carshop/: asgi.py  settings.py  urls.py
homework_07/carshop/carshop/carshop/templates/: home.html
homework_08/carshop/: README.md
homework_08/carshop/carshop/cars/: admin.py  models.py
homework_09/carshop/: README.md
homework_09/carshop/carshop/carshop/: urls.py  wsgi.py
homework_10/carshop/.github/workflows/: run_django_tests.yml  run_tests.yml
homework_10/carshop/carshop/cars/: models.py  urls.py  views.py
testing/test_homework_02/: test_car.py
testing/test_homework_05/: test_app.py
tmp/app/: app.py
tmp/docker-build/: Dockerfile
tmp/docker-build_tmp/: Dockerfile
tmp/trash/: app.py  main.py  models.py  myapp.py
(+6 files in other folders)
