[tool.poetry]
name = "python-developer-basic"
version = "0.1.0"
description = ""
authors = ["Mikhail Murzaev <mikhail.murzaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
starlette = "0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
