[tool.poetry]
name = "python-developer-basic"
version = "0.1.0"
description = ""
authors = ["Mikhail Murzaev <mikhail.murzaev@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
