[tool.poetry]
name = "python-developer-basic"
version = "0.1.0"
description = ""
authors = ["Mikhail Murzaev <mikhail.murzaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"


[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
