[tool.poetry]
name = "python-developer-basic"
version = "0.1.0"
description = ""
authors = ["Mikhail Murzaev <mikhail.murzaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
psycopg = "^3.1.14"
gunicorn = "^21.2.0"


[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
